Configure users, authentication and authorization

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -9,5 +9,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Port=3306;Database=ancol;Uid=root;Pwd=;"
   },
+  "AppSettings": {
+    "TokenKey" :  "somekeyfortesting"
+  },
   "AllowedHosts": "*"
 }
