Configure checkout and paypal

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -10,7 +10,11 @@
     "DefaultConnection": "Server=localhost;Port=3306;Database=ancol;Uid=root;Pwd=;"
   },
   "AppSettings": {
-    "TokenKey" :  "somekeyfortesting"
+    "TokenKey": "somekeyfortesting"
+  },
+  "Paypal": {
+    "ClientId": "AcOaCEpP9a0Knk8QGwqR3VbXU-NEa_Pkq1SzVb_6QKU8rPVkk4dh8oKPE260P4sNPIr_H8QHsKZuAaUL",
+    "Secret": "EDjBAvSjcNRg_1BYu5cCXPj9yiR0JAN19bHAwEPvx9wsJUCrz6tShtFESHIEUtyXoIIffIp_2eRFt3Qs"
   },
   "AllowedHosts": "*"
 }
