--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -14,7 +14,8 @@
   },
   "Paypal": {
     "ClientId": "AcOaCEpP9a0Knk8QGwqR3VbXU-NEa_Pkq1SzVb_6QKU8rPVkk4dh8oKPE260P4sNPIr_H8QHsKZuAaUL",
-    "Secret": "EDjBAvSjcNRg_1BYu5cCXPj9yiR0JAN19bHAwEPvx9wsJUCrz6tShtFESHIEUtyXoIIffIp_2eRFt3Qs"
+    "Secret": "EDjBAvSjcNRg_1BYu5cCXPj9yiR0JAN19bHAwEPvx9wsJUCrz6tShtFESHIEUtyXoIIffIp_2eRFt3Qs",
+    "ReturnUrl":  "http://localhost:3000/paypal/capture"
   },
   "AllowedHosts": "*"
 }
